; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/enic/extr_enic_main.c_enic_msglvl_check.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/enic/extr_enic_main.c_enic_msglvl_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.enic = type { i64, i32, i32 }

@.str = private unnamed_addr constant [35 x i8] c"msg lvl changed from 0x%x to 0x%x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.enic*)* @enic_msglvl_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @enic_msglvl_check(%struct.enic* %0) #0 {
  %2 = alloca %struct.enic*, align 8
  %3 = alloca i64, align 8
  store %struct.enic* %0, %struct.enic** %2, align 8
  %4 = load %struct.enic*, %struct.enic** %2, align 8
  %5 = getelementptr inbounds %struct.enic, %struct.enic* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @vnic_dev_msg_lvl(i32 %6)
  store i64 %7, i64* %3, align 8
  %8 = load i64, i64* %3, align 8
  %9 = load %struct.enic*, %struct.enic** %2, align 8
  %10 = getelementptr inbounds %struct.enic, %struct.enic* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %8, %11
  br i1 %12, label %13, label %25

13:                                               ; preds = %1
  %14 = load %struct.enic*, %struct.enic** %2, align 8
  %15 = getelementptr inbounds %struct.enic, %struct.enic* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = load %struct.enic*, %struct.enic** %2, align 8
  %18 = getelementptr inbounds %struct.enic, %struct.enic* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = load i64, i64* %3, align 8
  %21 = call i32 @netdev_info(i32 %16, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i64 %19, i64 %20)
  %22 = load i64, i64* %3, align 8
  %23 = load %struct.enic*, %struct.enic** %2, align 8
  %24 = getelementptr inbounds %struct.enic, %struct.enic* %23, i32 0, i32 0
  store i64 %22, i64* %24, align 8
  br label %25

25:                                               ; preds = %13, %1
  ret void
}

declare dso_local i64 @vnic_dev_msg_lvl(i32) #1

declare dso_local i32 @netdev_info(i32, i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
